--- a/backend/server/app/management/static/management/css/styles.css
+++ b/backend/server/app/management/static/management/css/styles.css
@@ -114,6 +114,7 @@ a {
 
 .content {
   width: 100%;
+  height: 100vh;
 }
 
 header > div {
@@ -158,13 +159,6 @@ header > div {
   background-color: var(--border);
 }
 
-/* input[type='checkbox']:after { */
-/*   width: 16px; */
-/*   height: 16px; */
-/*   border: 1px solid var(--border); */
-/*   border-radius: 2px; */
-/* } */
-
 table {
   border-collapse: collapse;
   width: 100%;
@@ -184,4 +178,13 @@ table tr {
 
 table td {
   padding: 12px 24px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
 }
